--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "export": "next export",
     "predeploy": "npm run build && npm run export",
-    "deploy": "gh-pages -d out",
+    "deploy": "master -d out",
     "start": "next start",
     "lint": "next lint"
   },
